<resources>
    <string name="app_name">Letraria</string>
    <string name="login">Login</string>
    <string name="icon">Icon</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastre_se">Não tem uma conta? Cadastre-se</string>
    <string name="cadastro">Cadastro</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="voltar">Voltar</string>
    <string name="meus_livros">Meus Livros</string>
    <string name="add_livros">Adicionar livro</string>
    <string name="nenhum_livro_encontrado">Nenhum Livro Encontrado</string>
    <string name="author">Autor</string>
    <string name="titulo">Titulo</string>
    <string name="filtrar">Filtrar</string>
    <string name="excluir">Excluir</string>
    <string name="editar">Editar</string>
    <string-array name="status_livro">
        <item>Lido</item>
        <item>Lendo</item>
        <item>Quero ler</item>
    </string-array>
    <string name="label_email">Insira seu e-mail</string>
    <string name="label_senha">Insira sua senha</string>
    <string name="label_titulo">Insira o título do livro</string>
    <string name="label_autor">Insira o nome do autor</string>
    <string name="status">Status</string>
    <string name="titulo_exemplo">O Nome do Vento</string>
    <string name="autor_exemplo">Patrick Rothfuss</string>
    <string name="status_exemplo">Status: Lido</string>
    <string name="logout">Sair</string>


</resources>