<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:orientation="vertical"
            tools:ignore="UselessParent">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:gravity="center"
                android:text="@string/cadastro"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingHorizontal="24sp"
            android:layout_marginBottom="24dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="119dp"
                android:layout_height="124dp"
                android:contentDescription="@string/login"
                app:srcCompat="@drawable/icon"
                android:layout_marginTop="18dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/primary"/>

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="@string/email"
                android:hint="@string/email"
                android:background="@drawable/edittext_background"
                android:paddingHorizontal="16dp"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="50dp"/>

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/senha"
                android:autofillHints="@string/senha"
                android:background="@drawable/edittext_background"
                android:paddingHorizontal="16dp"
                android:inputType="textPassword"
                android:layout_marginBottom="16dp" />
            <EditText
                android:id="@+id/confirmPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/confirmar_senha"
                android:autofillHints="@string/confirmar_senha"
                android:background="@drawable/edittext_background"
                android:paddingHorizontal="16dp"
                android:inputType="textPassword"
                android:layout_marginBottom="24dp" />

            <Button
                android:id="@+id/buttonCadastrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/primary"
                android:padding="16dp"
                android:text="@string/cadastrar"
                android:onClick="cadastrar"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/signupLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voltar"
                android:onClick="acessarLogin"
                android:textColor="@color/primary"
                android:textSize="14sp"
                android:layout_marginTop="24dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
