<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".HomeActivity">


    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/primary"
        android:text="@string/meus_livros"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:gravity="center"
        android:textStyle="bold" />


    <Spinner
        android:id="@+id/spinnerFilter"
        android:layout_width="50dp"
        android:layout_below="@id/textViewHeader"
        android:layout_margin="16dp"
        android:layout_height="50dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/edittext_background" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewBooks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/spinnerFilter"
        android:layout_marginTop="8dp"
        android:padding="8dp" />

    <TextView
        android:id="@+id/textViewEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nenhum_livro_encontrado"
        android:textColor="#3E2723"
        android:textSize="16sp"
        android:layout_centerInParent="true"
        android:visibility="gone" />


    <ImageButton
        android:id="@+id/buttonAdd"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@android:drawable/ic_input_add"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:onClick="adicionarLivro"
        android:background="@drawable/fab_background"
        android:contentDescription="@string/add_livros"
        app:tint="@color/white" />

</RelativeLayout>
